SAK-52356 Samigo backfill failing due to JPA positional parameter queries (#14391)
(cherry picked from commit 106279646bdcfb4df75c8135940b0cd9f47f3743)